--- a/.github/workflows/vib-build.yml
+++ b/.github/workflows/vib-build.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  CUSTOM_IMAGE_NAME: custom
+  CUSTOM_IMAGE_NAME: vanillaos-500s-13isk
   BUILDX_NO_DEFAULT_ATTESTATIONS: 1
 
 jobs:
